fix skills gap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,10 +150,10 @@ top: 0px;
 .skills-grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 40% 40%;
+  -ms-grid-columns: 45% 45%;
       grid-template-columns: 40% 40%;
-  grid-gap: 20px;
-  margin: 3px;
+  grid-gap: 10%;
+  margin: 5px;
 }
 
 .technical-skills {
